objects/UNITY_Proposal_Line_Item__c.object
<CustomObject>
    <description>UNITY object</description>
    <fields>
        <fullName>MSPFS_MSP_Cost__c</fullName>
        <description>Holds cost for MSP BU for intercompany transfer WOs</description>
        <label>MSP Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSPFS_MSP_Price__c</fullName>
        <description>Holds the price for MSP BU on intercompany transfer WOs</description>
        <label>MSP Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSPFS_Technician2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician #2</label>
        <referenceTo>CKSW_BASE__Resource__c</referenceTo>
        <relationshipLabel>Quote Line Items (Technician #2)</relationshipLabel>
        <relationshipName>Quote_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSPFS_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>CKSW_BASE__Resource__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Activity_Type__c</fullName>
        <description>The activity type for the quote line</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UNITY_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asset Mgmt Fees</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Destination Credit</fullName>
                </value>
                <value>
                    <fullName>Double Time Labor</fullName>
                </value>
                <value>
                    <fullName>Double Time Travel</fullName>
                </value>
                <value>
                    <fullName>Field Supplies</fullName>
                </value>
                <value>
                    <fullName>Freight - New Construction</fullName>
                </value>
                <value>
                    <fullName>Freight - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Holiday Labor</fullName>
                </value>
                <value>
                    <fullName>Holiday Travel</fullName>
                </value>
                <value>
                    <fullName>Overtime Labor</fullName>
                </value>
                <value>
                    <fullName>Overtime Travel</fullName>
                </value>
                <value>
                    <fullName>Parts - New Construction</fullName>
                </value>
                <value>
                    <fullName>Parts - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Pass Through Freight</fullName>
                </value>
                <value>
                    <fullName>Pass Through Labor</fullName>
                </value>
                <value>
                    <fullName>Pass Through Parts</fullName>
                </value>
                <value>
                    <fullName>Pass Through Rentals</fullName>
                </value>
                <value>
                    <fullName>Pass Through Tax</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
                <value>
                    <fullName>Rental - Equipment</fullName>
                </value>
                <value>
                    <fullName>Rental - New Construction</fullName>
                </value>
                <value>
                    <fullName>Rental - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Service Charge</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Standard Labor</fullName>
                </value>
                <value>
                    <fullName>Standard Travel</fullName>
                </value>
                <value>
                    <fullName>Use Tax</fullName>
                </value>
                <value>
                    <fullName>Vendor Double Time Labor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Broad__c</fullName>
        <formula>TEXT( UNITY_Product__r.Broad__c )</formula>
        <label>Broad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Cost_Plus__c</fullName>
        <label>Cost Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Cost__c</fullName>
        <label>Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Adjusted_Quantity__c</fullName>
        <label>Customer Adjusted Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Holiday_Multiplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Holiday Multiplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_OT_Multiplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer OT Multiplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Discount_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Holds Discount % value</description>
        <label>Discount %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Discounted_Price__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(UNITY_Discount__c)),UNITY_Discount__c&gt;0),
(1-UNITY_Discount__c)*UNITY_Total_Price__c,
IF(
AND(NOT(ISBLANK(UNITY_Discount_Amount__c)),UNITY_Discount_Amount__c&gt;0),
UNITY_Total_Price__c - UNITY_Discount_Amount__c,
UNITY_Total_Price__c
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Group__c</fullName>
        <formula>TEXT( UNITY_Product__r.Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Is_Labor_Or_Travel_Concerned__c</fullName>
        <formula>AND( 
    NOT( ISNULL(UNITY_Product__c) ) ,
    OR(
       ISPICKVAL(UNITY_Product__r.UNITY_Product_Type__c , &apos;Travel&apos;),
       ISPICKVAL(UNITY_Product__r.UNITY_Product_Type__c , &apos;Labor&apos;)
      )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Labor Or Travel Concerned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Is_Vendor_Supply__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the vendor supply the part.</inlineHelpText>
        <label>Is Vendor Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Line_Item_Unit_Price__c</fullName>
        <formula>UNITY_Discounted_Price__c / UNITY_Customer_Adjusted_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_MP_Labor_Cost__c</fullName>
        <label>MP Labor Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_MP_Labor_Vendor_Adjusted_Qty__c</fullName>
        <description>The Vendor Adjusted Qty on the Menu Price Labor Line to pass down to POLI</description>
        <label>MP Labor Vendor Adjusted Qty</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Make__c</fullName>
        <description>Make of unknown/special order part</description>
        <inlineHelpText>Make of unknown/special order part</inlineHelpText>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Model__c</fullName>
        <description>Model of unknown/special order part</description>
        <inlineHelpText>Model of unknown/special order part</inlineHelpText>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Not_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the line is billable or not</description>
        <label>Not Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Number_of_Techs__c</fullName>
        <label>Number of Techs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Technician</fullName>
                </value>
                <value>
                    <fullName>2 Technicians</fullName>
                </value>
                <value>
                    <fullName>Multi-Tech</fullName>
                </value>
                <value>
                    <fullName>1 Technician + Apprentice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Part_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Warehouse/Truck where an inventory part is sourced from</description>
        <label>Part Location</label>
        <referenceTo>FSO__Location__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Part_On_Hand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part On Hand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Part_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_PriceBook_Entry_Id__c</fullName>
        <label>PriceBook Entry Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Product needs to have the Miner Record Type.</errorMessage>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Miner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Proposal_Line_Item_External_Id__c</fullName>
        <description>This field will contain unique record id from source system.</description>
        <externalId>true</externalId>
        <label>UNITY Proposal Line Item External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UNITY_Proposal_Status__c</fullName>
        <label>Proposal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal Creation</fullName>
                </value>
                <value>
                    <fullName>Proposal sent for Manager Approval</fullName>
                </value>
                <value>
                    <fullName>Discount - Approved by Manager</fullName>
                </value>
                <value>
                    <fullName>Discount - Rejected by Manager</fullName>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Returned to Agent</fullName>
                </value>
                <value>
                    <fullName>Proposal Amended</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Proposal__c</fullName>
        <label>Quote</label>
        <referenceTo>UNITY_Proposal__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UNITY_Quantity_Cost__c</fullName>
        <formula>UNITY_Cost__c *  UNITY_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Quantity_Price__c</fullName>
        <formula>UNITY_Customer_Adjusted_Quantity__c * UNITY_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Related_Menu_Price_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The menu price line that the labor line is associated to</description>
        <label>Related Menu Price Line</label>
        <referenceTo>UNITY_Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Menu_Price_Labor_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Sales_Tax__c</fullName>
        <description>The sales tax to be applied to the quote line</description>
        <label>Sales Tax</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Tax_Code__c</fullName>
        <description>The tax code applied to the quote line</description>
        <label>Tax Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Template_Config_Ext_ID__c</fullName>
        <label>Template Config Ext ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Type__c</fullName>
        <description>The quote line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Labor - Installation</fullName>
                </value>
                <value>
                    <fullName>Labor - Service</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Vendor Services</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Stock Receipt (Restocking)</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Inch</fullName>
                </value>
                <value>
                    <fullName>Pack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Unknown_Part_Description_2__c</fullName>
        <formula>IF(NOT(ISBLANK(UNITY_Make__c)),&quot; &quot; + UNITY_Make__c,&quot;&quot;) +
IF(NOT(ISBLANK(UNITY_Model__c)),&quot; &quot; + UNITY_Model__c, &quot;&quot;) +
IF(NOT(ISBLANK(UNITY_Description__c)),&quot; &quot; + UNITY_Description__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unknown Part Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Unknown_Part_Description__c</fullName>
        <description>Any description entered on the PO Line for Unknown Parts</description>
        <label>Unknown Part Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor_Adjusted_Quantity__c</fullName>
        <label>Vendor Adjusted Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor_Holiday_Multiplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Holiday Multiplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor_OT_Multiplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor OT Multiplier</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Line Item</label>
    <nameField>
        <displayFormat>QTLI-{0000000000}</displayFormat>
        <label>Proposal Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Items</pluralLabel>
    <recordTypes>
        <fullName>UNITY_Customer_Proposal</fullName>
        <active>true</active>
        <label>Customer Proposal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>UNITY_Agent_Cannot_Save_Manager_Statuses</fullName>
        <active>true</active>
        <description>Agent cannot save the proposal record in manager statuses</description>
        <errorConditionFormula>AND ( 
CONTAINS( $User.Id ,  UNITY_Proposal__r.UNITY_Case__r.OwnerId  ), 
OR( 
ISPICKVAL( UNITY_Proposal__r.UNITY_Proposal_Status__c , &apos;Discount - Approved by Manager&apos;), 
ISPICKVAL( UNITY_Proposal__r.UNITY_Proposal_Status__c , &apos;Discount - Rejected by Manager&apos;), 
ISPICKVAL( UNITY_Proposal__r.UNITY_Proposal_Status__c , &apos;Proposal sent for Manager Approval&apos;) 
) 
)</errorConditionFormula>
        <errorMessage>Cannot Save record with Status: Manager Approved / Rejected. Please change to the appropriate status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Cancelled_Completed_Restrict</fullName>
        <active>true</active>
        <description>Restrict edit of record from completed or cancelled.</description>
        <errorConditionFormula>AND 
(
OR( 
ISPICKVAL( UNITY_Proposal__r.UNITY_Proposal_Status__c   ,&apos;Completed&apos;), 
ISPICKVAL( UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Cancelled&apos;) 
),
OR( 
ISNEW(),
ISCHANGED(UNITY_Available_Quantity__c), 
ISCHANGED(UNITY_Cost__c),
ISCHANGED(UNITY_Discount__c) ,
ISCHANGED(UNITY_Type__c) , 
ISCHANGED(UNITY_Price__c) , 
ISCHANGED(UNITY_Product__c) , 
ISCHANGED(UNITY_Total_Cost__c) , 
ISCHANGED(UNITY_Total_Price__c) 
)
)</errorConditionFormula>
        <errorMessage>Record cannot be edited after it has been set to Completed or Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Discount_Edit_Customer_Accept</fullName>
        <active>true</active>
        <description>Discount fields cannot be edited when customer status is Accepted</description>
        <errorConditionFormula>if( 
AND( 
ISPICKVAL(   UNITY_Proposal__r.UNITY_Status__c   ,&apos;Accepted&apos;), 
OR( ISCHANGED( UNITY_Discount__c ), ISCHANGED( UNITY_Discount_Amount__c ) ) 
) 
, true, false)</errorConditionFormula>
        <errorMessage>The Customer has Accepted the Quote, discount fields cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Discount_Percent_Amount</fullName>
        <active>true</active>
        <description>Ensures that either Amount or % field is used</description>
        <errorConditionFormula>OR ( 
AND (if(UNITY_Discount__c &gt; 0,true,false), if(UNITY_Discount_Amount__c &gt; 0,true,false) ) 
)</errorConditionFormula>
        <errorMessage>Please enter value in one of the two fields: Discount % or Discount Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Lock_Discount_Fields</fullName>
        <active>true</active>
        <description>Lock discount fields in sent to customer, approved by manager, completed, cancelled statuses</description>
        <errorConditionFormula>OR ( 
if( 
AND( 
OR (ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Sent to Customer&apos;), ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Completed&apos;), ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Cancelled&apos;), ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Returned to Agent&apos;), ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Discount - Approved by Manager&apos;)), 
ISCHANGED( UNITY_Discount__c ) 
) 
, true, false), 
if( 
AND( 
OR (ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Sent to Customer&apos;), ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Completed&apos;), ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Cancelled&apos;), ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Returned to Agent&apos;), ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  ,&apos;Discount - Approved by Manager&apos;)), 
ISCHANGED( UNITY_Discount_Amount__c ) 
) 
, true, false) 
)</errorConditionFormula>
        <errorMessage>Discount fields cannot be changed in &apos;Discount - Approved by Manager&apos;, &apos;Sent to Customer&apos;, &apos;Completed&apos;, &apos;Returned to Agent&apos; or &apos;Cancelled&apos; statuses</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Proposal_Restrict_Customer_Edit</fullName>
        <active>true</active>
        <description>Restrict customer from editing the Proposal when it is not in &quot;Sent to Customer&quot; status</description>
        <errorConditionFormula>AND(!ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  , &apos;Sent to Customer&apos;) , if(CONTAINS($User.ProfileId, &apos;00e18000000Hi5J&apos;),true,false) )</errorConditionFormula>
        <errorMessage>The Quote is currently being handled by the Agent. The Quote cannot be edited at this moment. Please contact the Agent for further clarification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Restrict_Agents_Skipping_Approvals</fullName>
        <active>false</active>
        <description>If discount exists and Manger Approved Discount is unchecked, the proposal cannot move into following status: Sent to Customer, Return to Agent, Proposal Completed, Proposal Amended &amp; sent to customer.</description>
        <errorConditionFormula>AND 
( 
OR 
( 
if(UNITY_Discount_Amount__c &gt; 0,true,false), 
if(UNITY_Discount__c &gt; 0,true,false), 
if( UNITY_Proposal__r.UNITY_Line_Item_Discount_Exists__c  &gt; 0,true,false), 
if( UNITY_Proposal__r.UNITY_Does_Discount_Amount_Exists__c  &gt; 0,true,false) 
) 
, 
if( UNITY_Proposal__r.UNITY_Manager_Approved_Discounts__c  = false,true,false) 
, 
OR 
( 
if(ISPICKVAL( UNITY_Proposal__r.UNITY_Proposal_Status__c , &apos;Sent to Customer&apos;),true,false), 
if(ISPICKVAL( UNITY_Proposal__r.UNITY_Proposal_Status__c , &apos;Returned to Agent&apos;),true,false), 
if(ISPICKVAL( UNITY_Proposal__r.UNITY_Proposal_Status__c , &apos;Completed&apos;),true,false) 
) 
)</errorConditionFormula>
        <errorMessage>The Quote contains discounts. Please submit the Quote for approval. Please contact the system administrator for more details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Restrict_Proposal_Amended</fullName>
        <active>true</active>
        <description>Cannot move status to Proposal Amended if the Customer status is Accepted</description>
        <errorConditionFormula>AND ( OR (ISPICKVAL(  UNITY_Proposal__r.UNITY_Status__c  , &apos;Accepted&apos;) , AND (  UNITY_Proposal__r.UNITY_Manager_Approved_Discounts__c  = true, ISPICKVAL( UNITY_Proposal__r.UNITY_Status__c ,&apos;&apos;) ) ) , 

OR ( ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  , &apos;Proposal Amended&apos;) , ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  , &apos;Proposal Creation&apos;) , ISPICKVAL(  UNITY_Proposal__r.UNITY_Proposal_Status__c  , &apos;Returned to Agent&apos;)) 
)</errorConditionFormula>
        <errorMessage>The Quote cannot be amended once the customer has Accepted the Quote</errorMessage>
    </validationRules>
</CustomObject>